--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <pre>
     {
       "<span class="hl string">Name</span>": "<span class="hl string">Nicolas Wielonsky</span>",
-      "<span class="hl string">Email</span>": <a href="mailto:contact@wielonsky.com" target="_blank">contact@wielonsky.com</a>,
+      "<span class="hl string">Email</span>": <a href="mailto:hello@wielonsky.com" target="_blank">hello@wielonsky.com</a>,
       "<span class="hl string">GitHub</span>": "<a href="https://github.com/nicolas-wsk" target="_blank">nicolas-wsk</a>",
       "<span class="hl string">Twitter</span>": "<a href="https://twitter.com/nicolas_wsk" target="_blank">@nicolas_wsk</a>",
       "<span class="hl string">Product Hunt</span>": "<a href="https://www.producthunt.com/@nicolas_wsk" target="_blank">@nicolas_wsk</a>",
@@ -40,8 +40,6 @@
         "<span class="hl string">Climate Change</span>",
         "<span class="hl string">Privacy</span>",
         "<span class="hl string">Computer Engineering</span>",
-        "<span class="hl string">Machine Learning</span>",
-        "<span class="hl string">Blockchain</span>",
       ]
     }
     </pre>
