✨(index) add now

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
       <pre>
     {
       "<span class="hl string">Name</span>": "<span class="hl string">Nicolas Wielonsky</span>",
-      "<span class="hl string">Email</span>": <a href="mailto:hello@wielonsky.com" target="_blank">hello@wielonsky.com</a>,
+      "<span class="hl string">Email</span>": <a href="mailto:" target="_blank">[My first name]@wielonsky.com</a>,
       "<span class="hl string">GitHub</span>": "<a href="https://github.com/nicolas-wsk" target="_blank">nicolas-wsk</a>",
       "<span class="hl string">Twitter</span>": "<a href="https://twitter.com/nicolas_wsk" target="_blank">@nicolas_wsk</a>",
       "<span class="hl string">Product Hunt</span>": "<a href="https://www.producthunt.com/@nicolas_wsk" target="_blank">@nicolas_wsk</a>",
       "<span class="hl string">MSc in Computer Science</span>": <span class="hl string special">true</span>,
       "<span class="hl string">Freelance</span>": <span class="hl string special">true</span>,
       "<span class="hl string">Codewars</span>": <span class="hl string special"><a href="https://www.codewars.com/users/nicolas-wsk/"><img class="codewars" src="https://www.codewars.com/users/nicolas-wsk/badges/micro" alt="codewars"></a></span>,
-      "<span class="hl string">Likes</span>": [
+      "<span class="hl string">Skills</span>": [
         "<span class="hl string">Javascript</span>",
         "<span class="hl string">React</span>",
         "<span class="hl string">Node.js</span>",
@@ -40,6 +40,7 @@
         "<span class="hl string">Climate Change</span>",
         "<span class="hl string">Privacy</span>",
         "<span class="hl string">Computer Engineering</span>",
+        "<span class="hl string">Web Security</span>",
       ]
     }
     </pre>
