--- a/index.html
+++ b/index.html
@@ -29,15 +29,13 @@
       "<span class="hl string">Product Hunt</span>": "<a href="https://www.producthunt.com/@nicolas_wsk" target="_blank">@nicolas_wsk</a>",
       "<span class="hl string">MSc in Computer Science</span>": <span class="hl string special">true</span>,
       "<span class="hl string">Freelance</span>": <span class="hl string special">true</span>,
-      "<span class="hl string">Codewars</span>": <span class="hl string special"><a href="https://www.codewars.com/users/nicolas-wsk/"><img class="codewars" src="https://www.codewars.com/users/nicolas-wsk/badges/micro" alt="codewars"></a></span>,
       "<span class="hl string">Skills</span>": [
-        "<span class="hl string">Javascript</span>",
+        "<span class="hl string">Typescript</span>",
         "<span class="hl string">React</span>",
         "<span class="hl string">Node.js</span>",
         "<span class="hl string">GraphQL</span>",
       ],
       "<span class="hl string">Interests</span>": [
-        "<span class="hl string">Climate Change</span>",
         "<span class="hl string">Privacy</span>",
         "<span class="hl string">Computer Engineering</span>",
         "<span class="hl string">Web Security</span>",
